[gd_scene load_steps=5 format=3 uid="uid://dcfkoqx47jgay"]

[ext_resource type="Script" uid="uid://bcs635p4ivwkw" path="res://scripts/attack1.gd" id="1_t412k"]
[ext_resource type="Texture2D" uid="uid://baq1ohyx7cv8j" path="res://assets/sprites/enemy.png" id="2_776wp"]

[sub_resource type="Curve2D" id="Curve2D_ruo4w"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 642, 338, 0, 0, 0, 0, 1268, 102, 0, 0, 0, 0, 1417, 223, 0, 0, 0, 0, 1277, 332, 0, 0, 0, 0, 638, 116, 0, 0, 0, 0, 464, 219, 0, 0, 0, 0, 642, 338)
}
point_count = 7

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w4jr8"]
size = Vector2(38, 38)

[node name="attack1" type="Node2D"]

[node name="cooldown" type="Timer" parent="."]
process_callback = 0
wait_time = 0.75
autostart = true

[node name="enemy" type="CharacterBody2D" parent="."]
collision_layer = 4
script = ExtResource("1_t412k")

[node name="attackPattern" type="Path2D" parent="enemy"]
curve = SubResource("Curve2D_ruo4w")

[node name="pathTracer" type="PathFollow2D" parent="enemy/attackPattern"]
position = Vector2(642, 338)
rotation = -0.36052

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy"]
shape = SubResource("RectangleShape2D_w4jr8")

[node name="Sprite2D" type="Sprite2D" parent="enemy"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_776wp")

[connection signal="timeout" from="cooldown" to="enemy" method="_on_cooldown_timeout"]
